Upadte saveDatabase()