@@ -81,20 +81,9 @@ public class DataBase {
 	public static String saveDatabase() {
 		try (Connection conn = DriverManager.getConnection(url, user, password)) {
 
-			Process process = Runtime.getRuntime().exec("docker exec -i server_db_1 mysqldump -u "
-					+ user + " -p" + password +
-					" MuscleForge > " + backupPath);
+
+			Process process = Runtime.getRuntime().exec(new String[]{"bash", "-c", "docker exec -i server_db_1 mysqldump -u root -proot MuscleForge > /shared-data/backup.sql"});
 			process.waitFor();
-
-			Thread.sleep(5000);
-
-			BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
-			String line;
-			while ((line = reader.readLine()) != null) {
-				System.out.println(line);
-			}
-
-			reader.close();
 			return backupPath;
 		} catch (SQLException | InterruptedException | IOException ex) {
 			ex.printStackTrace();
